@@ -51,7 +51,7 @@ Package=<5>
 Package=<4>
 {{{
     Begin Project Dependency
-    Project_Dep_Name gk
+    Project_Dep_Name gkdll
     End Project Dependency
 }}}
 
