@@ -1,5 +1,6 @@
 DATE       AUTHOR       CHANGE
 ---------- -----------  --------------------------------------------------------
+2002-03-18 nonchocoboy  Moved configuration to the GameKernel interface.
 2002-03-18 nonchocoboy  Version 0.1.2
 2002-03-18 nonchocoboy  Split GameApp into interface/implementation.
 2002-03-17 nonchocoboy  Version 0.1.1
